links open in a new tab

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/gregorywaynemorris/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="https://github.com/gregorywmorris"><i class="ti-github" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="https://twitter.com/Tech_N_Data"><i class="ti-twitter" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/gregorywaynemorris/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://github.com/gregorywmorris" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://twitter.com/Tech_N_Data" target="_blank"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-" aria-hidden="true"></i></a></li>
                 
@@ -28,7 +28,8 @@
                 <h6 class="header-mono" >Data Scientist | Data Engineer</h6>
                 <a button class="btn btn-primary btn-rounded" href="https://docs.google.com/document/d/1xHNtz9Voq64168U7wrL-7vHPqYixQYcA/edit?usp=sharing&ouid=118225270399344124643&rtpof=true&sd=true" target="_blank">
                     <i class="ti-printer pr-2"></i>Print my CV
-                </button></a>                
+                <!-- trunk-ignore(prettier/SyntaxError) -->
+                </button></a>
             </div>
         </div>
     </header>
@@ -94,13 +95,13 @@
                     <!--<li><span>Birthdate</span> : </li>-->
                     <li><span>Email</span> : <a href="mailto:gwm1980@gmail.com" class="text-muted" style="color: inherit; text-decoration: underline;">gwm1980@gmail.com</a></li>
                     <li><span>Phone</span> : +1 (803) 447-4511</li>
-                    <!--<li><span>Skype</span> : </li>-->
-                    <li><span>Address</span> :  Columbia, South Carolina</li>
+                    <li><span>Address</span> :  Columbia, South Carolina USA</li>
+                    <li><span>Slack</span> : Gregory Morris</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/gregorywaynemorris/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="https://github.com/gregorywmorris"><i class="ti-github" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="https://twitter.com/Tech_N_Data"><i class="ti-twitter" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/gregorywaynemorris/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://github.com/gregorywmorris" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://twitter.com/Tech_N_Data" target="_blank"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-" aria-hidden="true"></i></a></li>
                 </ul>  
@@ -770,9 +771,9 @@
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
-                            <li class="social-item"><a class="social-link text-dark" href="https://www.linkedin.com/in/gregorywaynemorris/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="https://github.com/gregorywmorris"><i class="ti-github" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="https://twitter.com/Tech_N_Data"><i class="ti-twitter" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://www.linkedin.com/in/gregorywaynemorris/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://github.com/gregorywmorris" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://twitter.com/Tech_N_Data" target="_blank"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                         </ul> 
                     </div>
                 </div>
