resume and expertise updates

--- a/index.html
+++ b/index.html
@@ -110,26 +110,32 @@
                 <h3 class="font-weight-light">My Expertise</h3>
                 <span class="line mb-5"></span>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-user icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Machine Learning</h6>
-                        <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
+                        <h6>Collaboration</h6>
+                        <p class="subtitle"> Experienced working across teams and domains. I have led a range of projects from a few users to
+                            implementations rolled out to 100's of locations.
+                        </p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-light-bulb icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Deployment</h6>
-                        <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
+                        <h6>Critical Thinking and Problem Solving</h6>
+                        <p class="subtitle">Expert at breaking down problems to core components and finding solutions. I have improved flows for better efficiency
+                            and resolved process gaps that have generated up to several millions dollars a year in lost revenue.
+                        </p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Product Management</h6>
-                        <p class="subtitle">voluptate commodi illo voluptatib.</p>
+                        <h6>Product Management and Support</h6>
+                        <p class="subtitle">Years of experience supporting a range of applications. Focused on improving utilization, satisfaction,
+                            and ROI to the company.
+                        </p>
                         <hr>
                     </div>
                 </div>
@@ -176,6 +182,7 @@
                         <div class="card-body">
                             <h6 class="title text-danger">Post Graduate</h6>
                                 <ul class="training">
+                                    <li class="training">Data Talks Club: Data Engineering Zoomcamp</li>
                                     <li class="training">Data Talks Club: Machine Learning Zoomcamp</li>
                                     <li class="training">Google Data Analytics</li>
                                     <li class="training">Product School: Product Management</li>
