fixed tittle spacing

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <li class="social-item"><a class="social-link text-light" href="https://twitter.com/Tech_N_Data" target="_blank"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-" aria-hidden="true"></i></a></li>
-                
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Gregory Morris</h1>
-                <h6 class="header-mono" >Data Scientist | Data Engineer</h6>
+                <br>
+                <h6 class="header-mono" >Data and Product Explorer</h6>
                 <a button class="btn btn-primary btn-rounded" href="https://docs.google.com/document/d/1xHNtz9Voq64168U7wrL-7vHPqYixQYcA/edit?usp=sharing&ouid=118225270399344124643&rtpof=true&sd=true" target="_blank">
                     <i class="ti-printer pr-2"></i>Print my CV
                 <!-- trunk-ignore(prettier/SyntaxError) -->
@@ -54,7 +54,7 @@
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Gregory Morris</h5>
-                        <div class="brand-subtitle">Data Scientist | Data Engineer</div>
+                        <div class="brand-subtitle">Data and Product Explorer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
