portfolio section complete, updated resume

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2017 - Present</h6>
+                            <h6 class="title text-danger">Present</h6>
                             <P><strong>Currently Studying</strong></P>
                             <ul class="training">
                                 <li class="training">MLOps though DataTalks.Club</li>
@@ -534,6 +534,33 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-md-6 col-lg-3 web new">
+                        <a class="img-popup" href="https://hicounselor.com/portfolio/gregory/OTkxMDk=" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/hc-small.jpg" class="img-fluid" alt="Hicounselor logo">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">HiCounselor</h6>
+                                        <p class="subtitle">HiCounselor ML portfolio</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 web">
+                        <a class="img-popup" href="https://gregorymorris.notion.site/Data-Science-Checklist-65581244e0d04fcfa31b441a23b2a469" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/ds-checklist.png" class="img-fluid" alt="Checklist preview image">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">Data Science Checklist</h6>
+                                        <p class="subtitle">Data Science project guide</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                     <div class="col-md-6 col-lg-4 advertising new">
                         <a class="img-popup" href="https://github.com/gregorywmorris/oaken-spirits" target="_blank">
                             <div class="portfolio-item">
@@ -546,46 +573,22 @@
                                 </div>
                             </div>
                         </a>
-                    </div> 
-                    <div class="col-md-6 col-lg-4 web new">
-                        <a class="img-popup" href="https://hicounselor.com/portfolio/gregory/OTkxMDk=" target="_blank">
-                            <div class="portfolio-item">
-                                <img src="assets/imgs/hc.jpg" class="img-fluid" alt="Hicounselor logo">
-                                <div class="content-holder">
-                                    <div class="text-holder">
-                                        <h6 class="title">HiCounselor</h6>
-                                        <p class="subtitle">HiCounselor ML portfolio</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising"> 
+                    <!--
+                    <div class="col-md-6 col-lg-4 advertising">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-1.jpg" class="img-fluid" alt="Temp - Update me!">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Data Engineering</h6>
                                     <p class="subtitle">tile 3</p>
                                 </div>
                             </div>
-                        </div>                                                       
-                    </div> 
-                    <div class="col-md-6 col-lg-4 web">
-                        <a class="img-popup" href="https://gregorymorris.notion.site/Data-Science-Checklist-65581244e0d04fcfa31b441a23b2a469" target="_blank">
-                            <div class="portfolio-item">
-                                <img src="assets/imgs/ds-checklist.png" class="img-fluid" alt="Temp - Update me!">
-                                <div class="content-holder">
-                                    <div class="text-holder">
-                                        <h6 class="title">Data Science Checklist</h6>
-                                        <p class="subtitle">Data Science project guide</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
+                        </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    --->
+                    <!--
+                    <div class="col-md-6 col-lg-4 advertising">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Temp - Update me!">
                             <div class="content-holder">
@@ -596,8 +599,10 @@
                                 </div>
                             </div>
                         </div>                                                       
-                    </div> 
-                    <div class="col-md-6 col-lg-4 advertising new"> 
+                    </div>
+                    -->
+                    <!--
+                    <div class="col-md-6 col-lg-4 advertising">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Temp - Update me!">            
                             <div class="content-holder">
@@ -608,70 +613,76 @@
                                 </div>
                             </div>
                         </div>
-                                
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding new">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-1.jpg" class="img-fluid" alt="Temp - Update me!">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Product Management</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div> 
-                        </div>
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-2.jpg" class="img-fluid" alt="Temp - Update me!">  
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Product Management</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div>
-                        </div>                                                     
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding new">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-3.jpg" class="img-fluid" alt="Temp - Update me!">   
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Product Management</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div>
-                        </div>                                                    
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-4.jpg" class="img-fluid" alt="Temp - Update me!">                      
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Product Management</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div>
-                        </div>                                                      
-                    </div> 
-                    <div class="col-md-6 col-lg-4 branding">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/branding-5.jpg" class="img-fluid" alt="Temp - Update me!">          
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-5.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Product Management</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div>
-                        </div>                                                   
                     </div>
-                </div> 
-            </div>  
+                    -->
+                    <div class="col-md-6 col-lg-4 branding new">
+                        <a class="img-popup" href="https://docs.google.com/presentation/d/12chbSBhanYboxeGnCPuZYenzVo06dBSRGAdjmQblsVQ/edit#slide=id.g35f391192_00" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/zombified.png" class="img-fluid" alt="Temp - Update me!">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">Product Pitch Deck</h6>
+                                        <p class="subtitle">Product pitch deck for healthcare application</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 branding new">
+                        <a class="img-popup" href="https://www.figma.com/proto/WUNEcUsK2EiH4DVFFN9NzA/Spotlight-Cinemas?node-id=156-3397&t=iXiC60NVkUbiKKa8-0&scaling=scale-down&page-id=107%3A3&starting-point-node-id=156%3A3397" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/spotlight.png" class="img-fluid" alt="Temp - Update me!">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">High Fidelity Prototype</h6>
+                                        <p class="subtitle">Spotlight Cinema HF prototype</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 branding">
+                        <a class="img-popup" href="https://www.figma.com/proto/WUNEcUsK2EiH4DVFFN9NzA/Spotlight-Cinemas?node-id=1-2&t=iXiC60NVkUbiKKa8-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/spotlight-wf.png" class="img-fluid" alt="Temp - Update me!">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">Wireframe Prototype</h6>
+                                        <p class="subtitle">Spotlight Cinema WF prototype</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div> 
+                    <div class="col-md-6 col-lg-4 branding">
+                        <a class="img-popup" href="https://docs.google.com/presentation/d/14TFFGvSL8X_7KWiZ-YaJo2-WaXOir-W5_K2-OFyCVa0/edit#slide=id.p" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/fmw.png" class="img-fluid" alt="Bank Logo">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">Product Imporvement Presentation</h6>
+                                        <p class="subtitle">Payment process improvement</p>
+                                    </div>
+                                </div>
+                            </div>
+                    </a>
+                    </div>
+                    <!--
+                    <div class="col-md-6 col-lg-4 branding">
+                        <a class="img-popup" href=" " target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/branding-5.jpg" class="img-fluid" alt="Temp - Update me!">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">Product Management</h6>
+                                        <p class="subtitle">tile 5</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>-->
+                </div>
+            </div>
         </div>            
     </section>
     <!-- End of portfolio section -->
