--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                                 <div class="content-holder">
                                     <div class="text-holder">
                                         <h6 class="title">Product Pitch Deck</h6>
-                                        <p class="subtitle">Product pitch deck for healthcare application</p>
+                                        <p class="subtitle">Product pitch deck for a healthcare application</p>
                                     </div>
                                 </div>
                             </div>
@@ -660,7 +660,7 @@
                                 <img src="assets/imgs/fmw.png" class="img-fluid" alt="Bank Logo">
                                 <div class="content-holder">
                                     <div class="text-holder">
-                                        <h6 class="title">Product Imporvement Presentation</h6>
+                                        <h6 class="title">Product Improvement Presentation</h6>
                                         <p class="subtitle">Payment process improvement</p>
                                     </div>
                                 </div>
