update portfolio projects

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">Present</h6>
-                            <P><strong>Currently Studying</strong></P>
+                            <P><strong>Currently Working On</strong></P>
                             <ul class="training">
                                 <li class="training">MLOps though DataTalks.Club</li>
                                 <li class="training">Deep Learning Specialization though DeepLearning.AI</li>
@@ -541,7 +541,7 @@
                                 <div class="content-holder">
                                     <div class="text-holder">
                                         <h6 class="title">HiCounselor</h6>
-                                        <p class="subtitle">HiCounselor ML portfolio</p>
+                                        <p class="subtitle">HiCounselor Data Science portfolio</p>
                                     </div>
                                 </div>
                             </div>
@@ -628,7 +628,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-4 branding new">
+                    <div class="col-md-6 col-lg-4 branding">
                         <a class="img-popup" href="https://www.figma.com/proto/WUNEcUsK2EiH4DVFFN9NzA/Spotlight-Cinemas?node-id=156-3397&t=iXiC60NVkUbiKKa8-0&scaling=scale-down&page-id=107%3A3&starting-point-node-id=156%3A3397" target="_blank">
                             <div class="portfolio-item">
                                 <img src="assets/imgs/spotlight.png" class="img-fluid" alt="Temp - Update me!">
