updated showcase to featured and reduced showing to 3

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">
-                        Showcase
+                        Featured
                     </a>
                     <a href="#" data-filter=".web">
                         Data Science
@@ -506,9 +506,8 @@
                         Product Management
                     </a>
                 </div>
-                <!-- adding 'new' to the second div clas will make it a featured item-->
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 web new"> <!-- Second div class -->
+                    <div class="col-md-6 col-lg-4 web"> <!-- add "new" to show on Featured tab -->
                         <a class="img-popup" href="https://public.tableau.com/app/profile/gregory.morris4179/vizzes" target="_blank">
                             <div class="portfolio-item">
                                 <img src="assets/imgs/tableau.png" class="img-fluid" alt="Tableau">
@@ -534,7 +533,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 col-lg-3 web new">
+                    <div class="col-md-6 col-lg-3 web">
                         <a class="img-popup" href="https://hicounselor.com/portfolio/gregory/OTkxMDk=" target="_blank">
                             <div class="portfolio-item">
                                 <img src="assets/imgs/hc-small.jpg" class="img-fluid" alt="Hicounselor logo">
