updated current learning and removed comptia certs

--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
                             <P><strong>Currently Working On</strong></P>
                             <ul class="training">
                                 <li class="training">MLOps though DataTalks.Club</li>
-                                <li class="training">Deep Learning Specialization though DeepLearning.AI</li>
                             </ul>
                             <hr>
                             <h6 class="title text-danger">2019 - Present</h6>
@@ -201,7 +200,7 @@
                                     <li class="training">Product School: Product Management</li>
                                     <li class="training">Registered Health Information Administrator (RHIA)</li>
                                     <li class="training">CompTIA Project+</li>
-                                    <li class="training">CompTIA Secure Infrastructure Specialist (A+ / Network+/ Security+)</li>
+                                    <!-- <li class="training">CompTIA Secure Infrastructure Specialist (A+ / Network+/ Security+)</li> -->
                                 </ul>
                             </P>
                             <hr>
