--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                             <P><strong>Currently Working On</strong></P>
                             <ul class="training">
                                 <li class="training">MLOps though DataTalks.Club</li>
+                                <li class="training">Maven Analytics: Advanced SQL</li>
                             </ul>
                             <hr>
                             <h6 class="title text-danger">2019 - Present</h6>
@@ -230,11 +231,11 @@
                             </div>
                             <h6>Data Analysis</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h6>SQL</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h6>Python</h6>
                             <div class="progress mb-3">
@@ -246,7 +247,7 @@
                             </div>
                             <h6>Dashboarding</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -527,6 +528,19 @@
                                     <div class="text-holder">
                                         <h6 class="title">API</h6>
                                         <p class="subtitle">ML productionized as an API</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 web new">
+                        <a class="img-popup" href="https://github.com/gregorywmorris/stroke-prediction" target="_blank">
+                            <div class="portfolio-item">
+                                <img src="assets/imgs/cdnow-logo.jpg" class="img-fluid" alt="Report">
+                                <div class="content-holder">
+                                    <div class="text-holder">
+                                        <h6 class="title">LTV & RFM Analysis</h6>
+                                        <p class="subtitle">Comprehensive Strategic Recommendations Report</p>
                                     </div>
                                 </div>
                             </div>
