--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Gregory Morris data scientist portfolio landing page.">
     <meta name="author" content="Gregory Morris">
-    <title>Gregory Morris Data Scientist</title>
+    <title>Gregory Morris Product Manager / Data Scientist</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
